// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <table
        className="appt-tables header-table"
      >
        <th>
          Date
        </th>
        <th>
          Time
        </th>
        <th>
          Provider Name
        </th>
        <th>
          Phone
        </th>
        <th>
          Scheduler
        </th>
        <th>
          Actions
        </th>
      </table>
      <table
        className="appt-tables"
      >
        <tr>
          <th
            colSpan={6}
          >
            Upcoming Appointments
          </th>
        </tr>
        <tr>
          <td>
            September 3, 2017
          </td>
          <td>
            3:38 PM
          </td>
          <td>
            Dr Name Name
          </td>
          <td>
            123-567-8910
          </td>
          <td>
            Name
          </td>
          <td>
            <button
              className="primary"
            >
              Cancel
            </button>
          </td>
        </tr>
        <tr>
          <td>
            September 3, 2017
          </td>
          <td>
            3:38 PM
          </td>
          <td>
            Dr Name Name
          </td>
          <td>
            123-567-8910
          </td>
          <td>
            Name
          </td>
          <td>
            <button
              className="primary"
            >
              Cancel
            </button>
          </td>
        </tr>
        <tr>
          <td>
            September 3, 2017
          </td>
          <td>
            3:38 PM
          </td>
          <td>
            Dr Name Name
          </td>
          <td>
            123-567-8910
          </td>
          <td>
            Name
          </td>
          <td>
            <button
              className="primary"
            >
              Cancel
            </button>
          </td>
        </tr>
      </table>
      <table
        className="appt-tables"
      >
        <tr>
          <th
            colSpan={6}
          >
            Past Appointments
          </th>
        </tr>
        <tr>
          <td>
            July 3, 2017
          </td>
          <td>
            3:38 PM
          </td>
          <td>
            Dr Name Name
          </td>
          <td>
            123-567-8910
          </td>
          <td>
            Name
          </td>
          <td />
        </tr>
        <tr>
          <td>
            July 3, 2017
          </td>
          <td>
            3:38 PM
          </td>
          <td>
            Dr Name Name
          </td>
          <td>
            123-567-8910
          </td>
          <td>
            Name
          </td>
          <td />
        </tr>
      </table>
    </div>
  </div>
</div>
`;

exports[`Without Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <h1>
        Patient has no appointment history
      </h1>
      <table
        className="appt-tables header-table"
      >
        <th>
          Date
        </th>
        <th>
          Time
        </th>
        <th>
          Provider Name
        </th>
        <th>
          Phone
        </th>
        <th>
          Scheduler
        </th>
        <th>
          Actions
        </th>
      </table>
    </div>
  </div>
</div>
`;
